--- a/Seniors/src/main/resources/application.yaml
+++ b/Seniors/src/main/resources/application.yaml
@@ -1,14 +1,5 @@
 spring:
   datasource:
-    url: jdbc:h2:./petshop-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password: sa
+    url: jdbc:h2:mem:petshop-test-db;DB_CLOSE_DELAY=-1;
   liquibase:
     change-log: classpath:db/master.changeLog.xml
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
-  h2:
-    console:
-      enabled: true
-server.port: 8080
