fixed file based database setup

--- a/Seniors/src/main/resources/application.yaml
+++ b/Seniors/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:petshop-test-db;DB_CLOSE_DELAY=-1;
+    url: jdbc:h2:./petshop-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
   liquibase:
     change-log: classpath:db/master.changeLog.xml
