--- a/Seniors/src/main/resources/application.yaml
+++ b/Seniors/src/main/resources/application.yaml
@@ -2,4 +2,4 @@ spring:
   datasource:
     url: jdbc:h2:./petshop-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
   liquibase:
-    change-log: classpath:db/master.changeLog.xml
+    change-log: classpath:db/master.changelog.xml
